# PathFinding

./: .gitignore  Astar.h  BFS.h  CMakeLists.txt  Dijkstra.h  DijkstraPq.h  Grid.h  Note.md  PathFinder.h  README.md  Server.h  Util.h  conanfile.txt  docker-compose.yml  main.cpp  package-lock.json
.github/workflows/: docker-build-push.yml
back/: .dockerignore  .gitignore  CMakeLists.txt  Dijkstra.h  Dockerfile  Grid.h  Maze.h  Server.h
back/.github/workflows/: Docker_ci_cd.yml
front/path/: Dockerfile  index.html  package-lock.json  package.json
front/path/src/: App.css  App.jsx  api.js  index.css
